--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="bucket img2 center">나만의 웹서비스 제작</div>
       <div class="bucket img1 center">앱제작 및 배포하기</div>
       <div class="bucket img1-t4 center">월 50만원 수익 창출하기</div>
-      <div class="bucket img2 center">월 100만원<br/>저금하기</div>
+      <div class="bucket img2 center">월 100만원씩<br/>저금하기</div>
     </div>
   </body>
 </html>
